# octos

./: ARCHITECTURE.md  Cargo.toml  MANIFESTO.md  PERSISTENCE.md  README.md  storage.db
crates/octos-compositor/: Cargo.toml
crates/octos-compositor/src/: lib.rs
crates/octos-core/: Cargo.toml
crates/octos-core/src/: ingestion.rs  lib.rs  main.rs  ui_arm.rs
crates/octos-core/tests/: core_tests.rs
crates/octos-iac/: Cargo.toml
crates/octos-iac/src/: lib.rs
crates/octos-iac/tests/: iac_tests.rs
crates/octos-init/: Cargo.toml
crates/octos-init/src/: lib.rs  main.rs  model_loader.rs
crates/octos-init/tests/: init_tests.rs
crates/octos-storage/: Cargo.toml
crates/octos-storage/src/: lib.rs  persistent_graph.rs
crates/octos-storage/tests/: storage_tests.rs
docs/: architecture-phase2.md
src/: build_iso_layout.rs
