[workspace]
resolver = "2"
members = [
    "crates/octos-core",
    "crates/octos-iac",
    "crates/octos-storage",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1.35", features = ["full"] }
