[workspace]
resolver = "2"
members = [
    "crates/octos-core",
    "crates/octos-iac",
    "crates/octos-storage",
    "crates/octos-init",
    "crates/octos-compositor",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1.35", features = ["full"] }
bincode = "1.3"
smithay = "0.3"
libc = "0.2"

